# cmake-project-template

./: CMakeLists.txt  LICENSE  README.md
cmake/: BuildDoc.cmake  FindSomePackage.cmake  bundang-config.cmake.in
doxygen/: Doxyfile.in
example/: CMakeLists.txt
example/simple/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/bundang/: core.hpp
src/: CMakeLists.txt  core.cpp
